updated auto client reward generation after 5th order
